- add UI and API for knowledge base

--- a/.env
+++ b/.env
@@ -2,7 +2,14 @@
 LANGSMITH_TRACING=true
 LANGSMITH_PROJECT=RAG Chatbot
 
-# Server Configuration
-HOST= 127.0.0.1
+# FastAPI Server Configuration
+HOST=127.0.0.1
 PORT=8000
 CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+
+# Gemini Model
+LLM_MODEL=gemini-2.5-flash-lite
+EMBEDDING_MODEL=gemini-embedding-001
+
+# Knowledge Base Configuration
+KB_NAME=dhla
