--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "langchain-text-splitters>=1.0.0",
     "markdown>=3.9",
     "nest-asyncio>=1.6.0",
+    "pydantic>=2.11.10",
     "pypdf>=6.1.3",
     "python-dotenv>=1.2.1",
+    "requests>=2.32.5",
     "unstructured>=0.18.15",
 ]
