--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ langchain-google-genai>=3.0.0
 langchain-text-splitters>=1.0.0
 markdown>=3.9
 nest-asyncio>=1.6.0
+pydantic>=2.11.10
 pypdf>=6.1.3
 python-dotenv>=1.2.1
+requests>=2.32.5
 unstructured>=0.18.15
