- add initial documents - clean up

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # Tracing with LangSmith
+LANGSMITH_API_KEY=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
 LANGSMITH_TRACING=true
 LANGSMITH_PROJECT=RAG Chatbot
 
