- add app.py for demonstration

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
-# Tracing with LangSmith
+# API Keys
 LANGSMITH_API_KEY=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
+GOOGLE_API_KEY=AIzaSyA8ERKJ8mZVTweSCcXWQ5EA3wGqjxDADDk
+
+# Tracing with LangSmith
 LANGSMITH_TRACING=true
 LANGSMITH_PROJECT=RAG Chatbot
 
