Redact API keys in .env file
Redacted sensitive API keys in the .env file.

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # API Keys
-LANGSMITH_API_KEY=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
-GOOGLE_API_KEY=AIzaSyA8ERKJ8mZVTweSCcXWQ5EA3wGqjxDADDk
+LANGSMITH_API_KEY=...
+GOOGLE_API_KEY=...
 
 # Tracing with LangSmith
 LANGSMITH_TRACING=true
